@@ -1,5 +1,6 @@
 /*
- * Copyright (c) 2020, Red Hat Inc.
+ * Copyright (c) 2020, 2022, Red Hat Inc.
+ * Copyright (c) 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -27,15 +28,16 @@ package jdk.internal.platform.cgroupv2;
 
 import java.io.IOException;
 import java.io.UncheckedIOException;
-import java.nio.file.Paths;
+import java.nio.file.Files;
+import java.nio.file.Path;
 import java.util.concurrent.TimeUnit;
 import java.util.function.Function;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 import jdk.internal.platform.CgroupInfo;
 import jdk.internal.platform.CgroupSubsystem;
 import jdk.internal.platform.CgroupSubsystemController;
-import jdk.internal.platform.CgroupUtil;
 
 public class CgroupV2Subsystem implements CgroupSubsystem {
 
@@ -45,7 +47,6 @@ public class CgroupV2Subsystem implements CgroupSubsystem {
     private final CgroupSubsystemController unified;
     private static final String PROVIDER_NAME = "cgroupv2";
     private static final int PER_CPU_SHARES = 1024;
-    private static final String MAX_VAL = "max";
     private static final Object EMPTY_STR = "";
     private static final long NO_SWAP = 0;
 
@@ -149,14 +150,7 @@ public class CgroupV2Subsystem implements CgroupSubsystem {
             return CgroupSubsystem.LONG_RETVAL_UNLIMITED;
         }
         String quota = tokens[tokenIdx];
-        return limitFromString(quota);
-    }
-
-    private long limitFromString(String strVal) {
-        if (strVal == null || MAX_VAL.equals(strVal)) {
-            return CgroupSubsystem.LONG_RETVAL_UNLIMITED;
-        }
-        return Long.parseLong(strVal);
+        return CgroupSubsystem.limitFromString(quota);
     }
 
     @Override
@@ -251,7 +245,7 @@ public class CgroupV2Subsystem implements CgroupSubsystem {
     @Override
     public long getMemoryLimit() {
         String strVal = CgroupSubsystemController.getStringValue(unified, "memory.max");
-        return limitFromString(strVal);
+        return CgroupSubsystem.limitFromString(strVal);
     }
 
     @Override
@@ -279,7 +273,7 @@ public class CgroupV2Subsystem implements CgroupSubsystem {
         if (strVal == null) {
             return getMemoryLimit();
         }
-        long swapLimit = limitFromString(strVal);
+        long swapLimit = CgroupSubsystem.limitFromString(strVal);
         if (swapLimit >= 0) {
             long memoryLimit = getMemoryLimit();
             assert memoryLimit >= 0;
@@ -310,7 +304,18 @@ public class CgroupV2Subsystem implements CgroupSubsystem {
     @Override
     public long getMemorySoftLimit() {
         String softLimitStr = CgroupSubsystemController.getStringValue(unified, "memory.low");
-        return limitFromString(softLimitStr);
+        return CgroupSubsystem.limitFromString(softLimitStr);
+    }
+
+    @Override
+    public long getPidsMax() {
+        String pidsMaxStr = CgroupSubsystemController.getStringValue(unified, "pids.max");
+        return CgroupSubsystem.limitFromString(pidsMaxStr);
+    }
+
+    @Override
+    public long getPidsCurrent() {
+        return getLongVal("pids.current");
     }
 
     @Override
@@ -325,13 +330,10 @@ public class CgroupV2Subsystem implements CgroupSubsystem {
     }
 
     private long sumTokensIOStat(Function<String, Long> mapFunc) {
-        try {
-            return CgroupUtil.readFilePrivileged(Paths.get(unified.path(), "io.stat"))
-                                .map(mapFunc)
-                                .collect(Collectors.summingLong(e -> e));
-        } catch (UncheckedIOException e) {
-            return CgroupSubsystem.LONG_RETVAL_UNLIMITED;
-        } catch (IOException e) {
+        try (Stream<String> lines = Files.lines(Path.of(unified.path(), "io.stat"))) {
+            return lines.map(mapFunc)
+                        .collect(Collectors.summingLong(e -> e));
+        } catch (UncheckedIOException | IOException e) {
             return CgroupSubsystem.LONG_RETVAL_UNLIMITED;
         }
     }
