@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2013, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2014, 2023, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -33,15 +33,15 @@ import org.checkerframework.dataflow.qual.SideEffectsOnly;
 import java.io.Closeable;
 import java.io.IOException;
 import java.io.UncheckedIOException;
-import java.util.Arrays;
 import java.util.Iterator;
+import java.util.List;
 import java.util.NoSuchElementException;
 import java.nio.file.FileTreeWalker.Event;
 
 /**
  * An {@code Iterator} to iterate over the nodes of a file tree.
  *
- * <pre>{@code
+ * {@snippet lang=java :
  *     try (FileTreeIterator iterator = new FileTreeIterator(start, maxDepth, options)) {
  *         while (iterator.hasNext()) {
  *             Event ev = iterator.next();
@@ -49,7 +49,7 @@ import java.nio.file.FileTreeWalker.Event;
  *             BasicFileAttributes attrs = ev.attributes();
  *         }
  *     }
- * }</pre>
+ * }
  */
 
 class FileTreeIterator implements Iterator<Event>, Closeable {
@@ -63,8 +63,6 @@ class FileTreeIterator implements Iterator<Event>, Closeable {
      *          if {@code maxDepth} is negative
      * @throws  IOException
      *          if an I/O errors occurs opening the starting file
-     * @throws  SecurityException
-     *          if the security manager denies access to the starting file
      * @throws  NullPointerException
      *          if {@code start} or {@code options} is {@code null} or
      *          the options array contains a {@code null} element
@@ -72,7 +70,7 @@ class FileTreeIterator implements Iterator<Event>, Closeable {
     FileTreeIterator(Path start, int maxDepth, FileVisitOption... options)
         throws IOException
     {
-        this.walker = new FileTreeWalker(Arrays.asList(options), maxDepth);
+        this.walker = new FileTreeWalker(List.of(options), maxDepth);
         this.next = walker.walk(start);
         assert next.type() == FileTreeWalker.EventType.ENTRY ||
                next.type() == FileTreeWalker.EventType.START_DIRECTORY;
